Fix spacing of and within input and question div's, add span to response h2, edit button appearance in css

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,3 +1,7 @@
 /* .hidden {
   display: none;
 } */
+
+button {
+ border-width: 3px;
+}
